--- a/tienda/src/main/webapp/css/estilos.css
+++ b/tienda/src/main/webapp/css/estilos.css
@@ -66,8 +66,9 @@ h2{
 /*------------------------------------------------*/
 
 .nav{
-    width: 90%;
-    height: 55px;
+    min-width: 200px;
+    max-width: 90%;
+    height: 60px;
     background-color: red;
     margin: auto;
     display: flex;
@@ -83,13 +84,17 @@ h2{
 
 
 .nav__ul{
+    margin-top: 10px;
+    margin-left: 20px;
     display: flex;
     justify-content: center;
+    flex-wrap: wrap;
     font-size: 20px;
 }
 .nav__li{
     display: flex;
     margin-right: 20px;
+    margin-bottom: 10px;
     width: 180px;
     height: 40px;
     align-items: center;
@@ -116,19 +121,40 @@ h2{
 
 /*------------------------------------*/
 
-.form-container{
+.form-container, .div-parrafo{
     display: flex;
     flex-wrap: wrap;
-    width: 50%;
+    width: 700px;
     justify-content: center;
     background-color: rgb(219, 218, 218);
     margin: 50px auto;
     padding: 20px;
     border-radius: 5px;
 }
+
+.form-container{
+    height: 350px;
+}
+
+.div-parrafo{
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    font-weight: 100;
+    font-size: 18px;
+}
+
+.parrafo-red{
+    color: rgb(199, 0, 0);
+}
+
+.parrafo-green{
+    color: rgb(0, 167, 0);
+}
+
 .ingresoDatos{
     display: flex;
+    justify-content: center;
     align-content: center;
+    flex-wrap: wrap;
 }
 .datos-container, .datos-container2 {
     display: inline-block;
@@ -167,6 +193,7 @@ input{
     display: flex;
     justify-content: space-evenly;
     margin-top: 20px;
+    flex-wrap: wrap;
 }
 .form input[type="submit"] {
     width: 120px;
@@ -227,4 +254,94 @@ input{
     background: #6b1000;
     box-shadow: inset 4px 4px 8px #5b0e00,
                 inset -4px -4px 8px #7b1200;
+}
+
+/*Responsive*/
+/*--------------------------------*/
+@media screen and (max-width:380px){
+
+    /* HEADER
+    -----------------------------------
+    */
+    h2{
+        display: none;
+    }
+
+    .header__li__salir{
+        width: 45px;
+    }
+
+    .header__li__salir i{
+        align-self: center;
+        margin: auto;
+    }
+
+    /* NAV
+    -----------------------------------
+    */
+
+    .nav{
+        width: 220px;
+        min-height: 310px;
+        margin-top: 8px;
+        margin-left: 68px;
+        flex-grow: 1;
+        
+    }
+    
+    
+    .nav__ul{
+        margin-top: 4px;
+        margin-left: 14px;
+    }
+
+    /* FORM
+    -----------------------------------
+    */
+    .datos-container2{
+        margin-left: 0;
+    }
+    .ingresoDatos{
+        display: flex;
+        align-content: center;
+        flex-wrap: wrap;
+        width: 250px;
+    }
+
+    .datos-container, .datos-container2 {
+        display: inline-block;
+        width: 250px;
+    }
+
+    .datosform input{
+        width: 240px;
+    }
+
+    input::placeholder{
+        font-size: 16px;
+    }
+    
+    /*
+        Botones Form
+        ---------------------------
+    */
+
+    .form input[type="submit"] {
+        margin: 3px;
+    }
+
+    /*
+        Div Form Parrafo
+        ---------------------------
+    */
+    .div-parrafo{
+        font-size: 16px;
+        margin: 8px auto;
+        width: 220px;
+    }
+    .form-container{
+        margin-top: 20px;
+        height: 460px;
+    }
+    
 }
